update case study

--- a/_projects/sba_ascent.html
+++ b/_projects/sba_ascent.html
@@ -44,7 +44,7 @@ source_code_url:
   <p>
     To further their mission of helping small businesses succeed, the Small
     Business Administration (SBA) needed a learning platform focused on
-    female entrepreneurs. We've been engaged as a subcontractor to Fearless to
+    female entrepreneurs. We engaged as a subcontractor to Fearless to
     deliver a technical solution that maximizes the use of an existing
     open-source-software product without limiting the flexibility needed
     to deliver a unique user experience.
@@ -58,7 +58,7 @@ source_code_url:
     increase their chances of success. Determined to address this issue, the SBA
     launched Ascent, which included the creation of a new learning platform based
     on an existing open-source content management system (CMS) called Brightspot.
-    The challenge has been leveraging Brightspot in such a way as to not only
+    A critical challenge was leveraging Brightspot in such a way as to not only
     avoid constraining the design of the user experience to what's available
     "out-of-the-box," but also to avoid the nightmare of having to maintain a
     "custom-off-the-shelf-software" product.
@@ -67,11 +67,11 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    As a subcontractor to <a href="https://fearless.tech/">Fearless</a>, Skylight's been
-    providing additional technical leadership around how best to address this challenge.
-    In particular, we've helped architect and engineer a custom API wrapper that
+    As a subcontractor to <a href="https://fearless.tech/">Fearless</a>, our team provided
+    additional technical leadership around how best to address this challenge.
+    In particular, we helped architect and engineer a custom API wrapper that
     programmatically makes calls into Brightspot, thereby leveraging its full feature set in
-    an independent way. This approach gives them the power to create a curated learning
+    an independent way. This approach gave them the power to create a curated learning
     experience for female entrepreneurs.
   </p>
 {% endcapture %}
