update case study

--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -80,11 +80,10 @@ source_code_url: https://github.com/agilesix/diffusion-marketplace
 
 {% capture solution %}
   <p>
-    In collaboration with <a href="https://agile6.com/">Agile Six</a>, we've been working with the VHA to address
-    this challenge through the delivery of a knowledge management platform called
-    the Diffusion Marketplace. The purpose of this platform is to empower VHA
-    practitioners and other employees to identify and disseminate promising
-    healthcare practices.
+    In collaboration with <a href="https://agile6.com/">Agile Six</a>, we've been
+    working with the VHA to address this challenge through the delivery of a knowledge management
+    platform called the Diffusion Marketplace. The purpose of this platform is to empower VHA
+    practitioners and other employees to identify and disseminate promising healthcare practices.
   </p>
 
   <p>
@@ -96,10 +95,31 @@ source_code_url: https://github.com/agilesix/diffusion-marketplace
   </p>
 
   <p>
-    After validating our primary design solution through extensive user research,
+    After validating our primary design solution through research and prototyping,
     we rapidly iterated toward the release of beta and production versions of the
     platform &mdash; with an initial collection of over 50 practices.
   </p>
+
+  <p>
+    Following production launch, our team has focused on continually improving the platform,
+    including:
+  </p>
+
+  <ul>
+    <li>
+      Expanding the number of practices
+    </li>
+
+    <li>
+      Developed a new practice editor feature that empowers practice editors to update
+      their content directly and helps ensure the site has the most up-to-date information
+    </li>
+
+    <li>
+      Improved the home and search experience to balance the competing needs of targeted
+      searches with exploratory browsing
+    </li>
+  </ul>
 {% endcapture %}
 
 {% capture results %}
@@ -121,7 +141,11 @@ source_code_url: https://github.com/agilesix/diffusion-marketplace
     </li>
 
     <li>
-      Currently continuously improving the platform with plans to add hundreds of more practices
+      Expanded the number of practices to 119 in total
+    </li>
+
+    <li>
+      Facilitated the adoption of 1,584 practices through the platform
     </li>
   </ul>
 {% endcapture %}
