case study updates

--- a/_projects/ct_oec_website_redesign.html
+++ b/_projects/ct_oec_website_redesign.html
@@ -137,20 +137,16 @@ source_code_url:
     </li>
 
     <li>
-      Fully cutover to the new site in May 2020
+      Fully cut over to the new site in May 2020, which has
+      continually received positive user feedback and attracted
+      3x more daily visitors than <a href="https://portal.ct.gov/"">ct.gov</a>
     </li>
 
     <li>
-      Have continually received positive user feedback
-    </li>
-
-    <li>
-      Maintainable by the Office of Early Childhood's internal staff
-    </li>
-
-    <li>
-      OEC was one of the first agencies within the State of Connecticut
-      to deliver timely, critical <a href="https://www.ctoec.org/covid-19">online information related to COVID</a>
+      Enabled OEC to be one of the first agencies within the State of
+      Connecticut to deliver timely, critical
+      <a href="https://www.ctoec.org/covid-19">online information related to COVID</a>,
+      which has averaged 2,000 page views per day
     </li>
   </ul>
 
