--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -107,7 +107,7 @@ source_code_url: https://github.com/agilesix/diffusion-marketplace
 
   <ul>
     <li>
-      Expanding the number of practices
+      Expanding the number of practices and the rate at which they're adopted
     </li>
 
     <li>
@@ -145,7 +145,7 @@ source_code_url: https://github.com/agilesix/diffusion-marketplace
     </li>
 
     <li>
-      Facilitated the adoption of 1,584 practices through the platform
+      Facilitated the adoption of 100 practices through the platform itself
     </li>
   </ul>
 {% endcapture %}
