case study edit

--- a/_projects/ct_oec_website_redesign.html
+++ b/_projects/ct_oec_website_redesign.html
@@ -139,7 +139,7 @@ source_code_url:
     <li>
       Fully cut over to the new site in May 2020, which has
       continually received positive user feedback and attracted
-      3x more daily visitors than <a href="https://portal.ct.gov/"">ct.gov</a>
+      3x more daily visitors than the old site
     </li>
 
     <li>
