case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -103,8 +103,8 @@ source_code_url:
     us to build a digital platform called GearFit. The current product vision for
     GearFit encompasses several important capabilities, such as user-driven
     feedback, issues reporting & analytics, catalog management & ordering, and
-    training videos. The target population of users includes all aircrew,
-    the operational groups who support them, and potentially other military branches.
+    training videos. The target population of users includes all aircrew and the
+    operational groups who support them.
   </p>
 
   <p>
