--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -107,7 +107,8 @@ source_code_url: https://github.com/agilesix/diffusion-marketplace
 
   <ul>
     <li>
-      Expanding the number of practices and the rate at which they're adopted
+      Expanding the number of practices, such as hospital-acquired pneumonia prevention,
+      and the rate at which they're adopted
     </li>
 
     <li>
