case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -195,7 +195,7 @@ source_code_url:
 {% capture results %}
   <ul>
     <li>
-      Delivered an alpha version of the gear-fitment feedback
+      Delivered an alpha version of the gear-fitment-feedback
       application within three months
     </li>
 
