case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -106,7 +106,7 @@ source_code_url:
     and training videos. The target population of users includes all aircrew
     who use PPE and the operational groups responsible for making sure
     they're supplied with suitable gear. These operational groups include aircrew
-    flight equipment technicians (AFEs) who service aircrew and help resolve their
+    flight equipment (AFE) technicians who service aircrew and help resolve their
     equipment issues, requirements managers who translate feedback on gear issues
     into actionable requirements, and supply-chain professionals who make acquisition
     and logistical decisions based on these requirements.
