case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -175,12 +175,12 @@ source_code_url:
     think about what type of gear they're looking to provide feedback on. This involved
     integrating with a third-party asset management system to pull in data about which
     gear is assigned to them. We also provided an option for users to submit feedback
-    anonymously to avoid any feelings of embarrassment. As part of the rollout, we also
+    anonymously to avoid potential feelings of embarrassment. As part of the rollout, we also
     launched a marketing and communications campaign to help overcome cultural and
     behavioral barriers to using the application &mdash; for example, "sitting in your pee
     isn't a rite of passage." As a result of these efforts, a growing population of
     aircrew have started to use the application. And for the first time, HSD is able
-    to collect accurate data on gear issues within a central location and better coordinate
+    to collect accurate data on gear issues in a central system and better coordinate
     and communicate response actions.
   </p>
 
