case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -179,9 +179,9 @@ source_code_url:
     launched a marketing and communications campaign to help overcome cultural and
     behavioral barriers to using the application &mdash; for example, "sitting in your pee
     isn't a rite of passage." As a result of these efforts, a growing population of
-    aircrew have started to use the application. And for the first time, HSD is able
-    to collect accurate data on gear issues in a central system and better coordinate
-    and communicate response actions.
+    aircrew have started to use the application. And for the first time, HSD is
+    able to collect and access quality data on gear issues from a central location,
+    enabling them to better coordinate and communicate response actions.
   </p>
 
   <p>
@@ -221,7 +221,7 @@ source_code_url:
 
     <li>
       Began second phase of work, focused on optimizing translation of
-      feedback into actionable requirements
+      feedback from aircrew into actionable requirements
     </li>
   </ul>
 {% endcapture %}
