case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -54,6 +54,8 @@ news_posts:
     url: https://www.af.mil/News/Article-Display/Article/1801680/new-direction-for-female-specific-flight-equipment/
   - title: New bill aims to get better-fitting equipment to women in the military
     url: https://www.stripes.com/news/us/new-bill-aims-to-get-better-fitting-equipment-to-women-in-the-military-1.609795
+  - title: AFLCMC division to launch new feedback App
+    url: https://www.afmc.af.mil/News/Article-Display/Article/2203362/aflcmc-division-to-launch-new-feedback-app/
 project_url:
 project_cta:
 source_code_url:
