case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -149,7 +149,7 @@ source_code_url:
 
     <li>
       Aircrew are equipped with dozens of different types of gear, with names that aren't
-      plain language and hard to remember. This made communicating issues extremely difficult,
+      plain language and are hard to remember. This made communicating issues extremely difficult,
       often requiring aircrew to sift through catalogs of items to find the right identifiers.
     </li>
 
