case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -177,7 +177,7 @@ source_code_url:
     think about what type of gear they're looking to provide feedback on. This involved
     integrating with a third-party asset management system to pull in data about which
     gear is assigned to them. We also provided an option for users to submit feedback
-    anonymously to avoid potential feelings of embarrassment. As part of the rollout, we also
+    anonymously to avoid potential feelings of embarrassment. As part of the rollout, we
     launched a marketing and communications campaign to help overcome cultural and
     behavioral barriers to using the application &mdash; for example, "sitting in your pee
     isn't a rite of passage." As a result of these efforts, a growing population of
