case study edits

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -108,7 +108,7 @@ source_code_url:
     and training videos. The target population of users includes all aircrew
     who use PPE and the operational groups responsible for making sure
     they're supplied with suitable gear. These operational groups include aircrew
-    flight equipment (AFE) technicians who service aircrew and help resolve their
+    flight equipment technicians who service aircrew and help resolve their
     equipment issues, requirements managers who translate feedback on gear issues
     into actionable requirements, and supply-chain professionals who make acquisition
     and logistical decisions based on these requirements.
@@ -170,7 +170,7 @@ source_code_url:
   </ul>
 
   <p>
-    To address this problem area, we created and launched a minimum viable product (MVP)
+    To address this problem area, we created and launched a minimum viable product
     for gathering gear-fitment feedback from aircrew, targeted initially at female pilots.
     We designed the application to be fast, simple, and psychologically safe for aircrew
     to use. To help accomplish that, we created an experience where aircrew don't have to
