case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -218,7 +218,7 @@ source_code_url:
     </li>
 
     <li>
-      Continually improving the feedback applications and expanding user adoption
+      Continually improving the feedback application and expanding user adoption
     </li>
 
     <li>
