--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -40,6 +40,8 @@ practices:
   - Design studios
   - User experience design
   - Comparative analysis
+  - Learn startup
+  - User growth marketing
   - Technical discovery
   - Design system
   - Responsive web design
