case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -205,7 +205,7 @@ source_code_url:
 
     <li>
       Launched a beta version in production to a user
-      base of 300&ndash;500 pilots (largely female) in March 2020
+      base of 300 pilots (largely female) in March 2020
     </li>
 
     <li>
