case study updates

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -103,17 +103,19 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    To address this challenge, HSD engaged us to build a digital platform
-    called GearFit. The current product vision for GearFit encompasses
-    several important capabilities, such as user-driven feedback, issues
-    reporting & analytics, case management, catalog management & ordering,
-    and training videos. The target population of users includes all aircrew
-    who use PPE and the operational groups responsible for making sure
-    they're supplied with suitable gear. These operational groups include aircrew
-    flight equipment technicians who service aircrew and help resolve their
-    equipment issues, requirements managers who translate feedback on gear issues
-    into actionable requirements, and supply-chain professionals who make acquisition
-    and logistical decisions based on these requirements.
+    To address this challenge, HSD engaged us to build a digital platform called
+    GearFit. The current product vision for GearFit encompasses several important
+    capabilities, such as user-driven feedback, issues reporting & analytics, case
+    management, catalog management & ordering, and training videos. The target
+    population of users includes all aircrew who use PPE (for example, pilot,
+    flight engineer, navigator) and the operational groups responsible for making
+    sure they're supplied with suitable gear. These operational groups include aircrew
+    flight equipment technicians who service aircrew and help resolve their equipment
+    issues (for example, fixing oxygen masks), requirements managers who translate
+    feedback on gear issues into actionable requirements (for example, identifying
+    gear defects), and supply-chain professionals who make acquisition and logistical
+    decisions based on these requirements (for example, ordering permanent modifications
+    to gear).
   </p>
 
   <p>
@@ -150,9 +152,16 @@ source_code_url:
     </li>
 
     <li>
+      Safety issues that are life-threatening will usually get prioritized; while daily comfort
+      issues associated with uniforms and gear are often overlooked, yet these issues have
+      the potential to have long-term consequences.
+    </li>
+
+    <li>
       Aircrew are equipped with dozens of different types of gear, with names that aren't
-      plain language and are hard to remember. This made communicating issues extremely difficult,
-      often requiring aircrew to sift through catalogs of items to find the right identifiers.
+      plain language and are hard to remember (for example, Helmet 55/P, Anti-G Garment
+      Cutaway). This made communicating issues extremely difficult, often requiring aircrew
+      to sift through catalogs of items to find the right identifiers.
     </li>
 
     <li>
@@ -172,7 +181,7 @@ source_code_url:
   </ul>
 
   <p>
-    To address this problem area, we created and launched a minimum viable product
+    To address this problem area, we created and launched a minimum viable product (MVP)
     for gathering gear-fitment feedback from aircrew, targeted initially at female pilots.
     We designed the application to be fast, simple, and psychologically safe for aircrew
     to use. To help accomplish that, we created an experience where aircrew don't have to
@@ -189,10 +198,14 @@ source_code_url:
   </p>
 
   <p>
-    With this foundation in place, the next phase of our work will largely focus on solving
-    the problem of how to optimize translating feedback from aircrew into actionable requirements.
-    It'll also focus on continually improving the feedback application and expanding user adoption,
-    including additional types of aircrew.
+    With this foundation in place, the next phase of our work will largely focus on
+    solving the problem of how to optimize translating feedback from aircrew into
+    actionable requirements. GearFit's Phase 2 MVP will focus on: channelizing feedback
+    data to the proper program office or requirement manager; assisting with case management;
+    and leveraging feedback data to provide trends and analysis to leadership. In addition,
+    the team will  focus on continually improving the feedback application and expanding user
+    adoption, including additional aircrew and other types of personnel such as maintainers and
+    medical professionals.
   </p>
 {% endcapture %}
 
@@ -205,7 +218,7 @@ source_code_url:
 
     <li>
       Launched a beta version in production to a user
-      base of 300 pilots (largely female) in March 2020
+      base of 700+ female pilots in March 2020
     </li>
 
     <li>
