case study edits

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title_tag: U.S. Air Force
-title: Modernizing the management of personnel protective equipment
+title: Modernizing the management of personal protective equipment
 permalink: /work/experience/usaf-gearfit/
 image: /img/projects/usaf_gearfit/gearfit.svg
 image_description: Gear technician helping a female pilot put on her helmet.
@@ -11,7 +11,7 @@ feature_image_shadow:
 order: 5
 display: true
 tags: [service delivery, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, security & privacy, defense, air force, mical nobel, phoebe espiritu, lesley evans, adam weber, nick clyde, mitchell sipus, maya benari, kari hodges, eric richards, nicole campbell]
-excerpt: A digital platform for transforming how the U.S. Air Force manages personnel protective equipment.
+excerpt: A digital platform for transforming how the U.S. Air Force manages personal protective equipment.
 project_members:
   - nicole-campbell
   - phoebe-espiritu
@@ -67,7 +67,7 @@ source_code_url:
   <p>
     Providing better-fitting gear to aircrew, particularly female pilots, is one of
     the U.S. Air Force's (USAF's) top priorities. Their Human Systems Division (HSD) engaged us
-    to build a platform for modernizing how they manage personnel protective equipment (PPE).
+    to build a platform for modernizing how they manage personal protective equipment (PPE).
   </p>
 {% endcapture %}
 
