publish case study

--- a/_projects/usaf_arms.html
+++ b/_projects/usaf_arms.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: U.S. Air Force
 title: Modernizing the information management of aviation resources
-permalink: /work/experience/usaf_arms/
+permalink: /work/experience/usaf-arms/
+redirect_from:
+  - /work/experience/usaf_arms/
 image: /img/projects/usaf_arms/arms.svg
 image_description: An Air Force parachutist jumping out of a plan, with digital components in the background.
 feature_image:
