--- a/_projects/usaf_jocas.html
+++ b/_projects/usaf_jocas.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: U.S. Air Force
 title: Revamping an outdated cost accounting system
-permalink: /work/experience/usaf_jocas/
+permalink: /work/experience/usaf-jocas/
+redirect_from:
+  - /work/experience/usaf_jocas/
 image: /img/projects/usaf_jocas/jocas.svg
 image_description: An accounting professional using a modern tablet to perform accounting functions, with an old desktop system in the background.
 feature_image:
