--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -69,7 +69,7 @@ source_code_url:
     The program brought together expert trainers and coaches
     from 18F, the Presidential Innovation Fellows, and the U.S. Digital Service
     (the first-ever such cross-organizational collaboration) who worked with agencies
-    to assemble their teams and build-up their expertise through a variety of development
+    to assemble their teams and build up their expertise through a variety of development
     techniques, including classroom training, hands-on learning (involving
     real-world acquisitions), and knowledge capture and sharing.
   </p>
