--- a/pages/join.html
+++ b/pages/join.html
@@ -123,9 +123,9 @@ preload: hero-join-us.svg
             {% include icons/join/compensation.svg %}
             <h3>Compensation</h3>
             <p>
-              We offer a competitive salary, a stake in the company's success, performance bonuses,
-              referral bonuses, publication bonuses, public speaking bonuses, a quick-pay program,
-              and <a href="https://maps.certify.sba.gov/hubzone/map#center=39.828200,-98.579500&zoom=5">HUBZone</a>
+              We offer a competitive salary, a stake in the company's success with stock
+              options regardless of role, performance rewards, referral bonuses,
+              a quick-pay program, and <a href="https://maps.certify.sba.gov/hubzone/map#center=39.828200,-98.579500&zoom=5">HUBZone</a>
               resident stipends.
             </p>
           </div>
