--- a/pages/about.html
+++ b/pages/about.html
@@ -53,7 +53,7 @@ preload: hero-about-us.svg
   </section>
 
   {% if site.data.team[0] %}
-    <section id="meet-the-team" class="page-block">
+    <section id="meet-the-team" class="mx-auto container-xl">
       <div class="page-block-header-2">
         <h2>Meet the team</h2>
       </div>
