publish ascent case study

--- a/_projects/sba_ascent.html
+++ b/_projects/sba_ascent.html
@@ -9,7 +9,7 @@ feature_image:
 feature_image_description:
 feature_image_shadow:
 order: 75
-display: false
+display: true
 tags: [service delivery, devops, cloud & platforms, apis, economic development, andrew wagner]
 excerpt: A learning platform designed to help female entrepreneurs start and grow their small businesses successfully.
 project_members:
@@ -33,8 +33,8 @@ practices:
   - Cloud hosting
   - Virtual teams
 news_posts:
-  - title: Fearless to develop a platform to train every woman entrepreneur in America
-    url: https://fearless.tech/blog/2018/11/06/fearless-to-develop-a-platform-to-train-every-woman-entrepreneur-in-america
+  - title: SBA Launches New, Free Online Digital Learning Platform
+    url: https://www.sba.gov/article/2021/jan/11/sba-launches-new-free-online-digital-learning-platform
 project_url:
 project_cta:
 source_code_url:
@@ -53,13 +53,12 @@ source_code_url:
 
 {% capture challenge %}
   <p>
-    Many female entrepreneurs face significant obstacles to building their businesses,
-    particularly when it comes to acquiring the outside knowledge they need to
-    increase their chances of success. Determined to address this issue, the SBA
-    launched Ascent, which included the creation of a new learning platform based
-    on an existing open-source content management system (CMS) called Brightspot.
-    A critical challenge was leveraging Brightspot in such a way as to not only
-    avoid constraining the design of the user experience to what's available
+    Female entrepreneurs start and own nearly half of all businesses in the U.S.,
+    employ 9.4 million workers, generate $1.9 trillion in revenue and represent
+    all industries. To help elevate their success, the SBA launched Ascent, a free
+    online learning platform based on an existing open-source content management system
+    (CMS) called Brightspot. A critical challenge was leveraging Brightspot in such a way as
+    to not only avoid constraining the design of the user experience to what's available
     "out-of-the-box," but also to avoid the nightmare of having to maintain a
     "custom-off-the-shelf-software" product.
   </p>
@@ -87,6 +86,10 @@ source_code_url:
     <li>
       Delivered 11 modules of working content, including video, audio, downloadable
       worksheets, interactive self-assessments, and more
+    </li>
+
+    <li>
+      Released to the public in January 2021
     </li>
   </ul>
 {% endcapture %}
