update gearfit case study

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -227,8 +227,8 @@ source_code_url:
     </li>
 
     <li>
-      Demoed work to and received praise from the Secretary of
-      the Air Force, Barbara Barrett, and her former Chief of Staff,
+      Demoed work to and received praise from former Secretary of
+      the Air Force, Barbara Barrett, and her Chief of Staff,
       General David Goldfein
     </li>
 
