update DITAP course

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -192,13 +192,13 @@ class_2_spots:
       <h2 id="tuition-and-dates">Dates and tuition</h2>
       <a href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-123043007949" class="row tuition-card no-gutters mt-4">
         <div class="col-12">
-          <h3 class="class-heading">March 2, 2021 to August 19, 2021</h3>
+          <h3 class="class-heading">March 29, 2021 to September 15, 2021</h3>
           {% if page.class_1_spots %}
             <div class="class-spots">
               <span>{{ page.class_1_spots }} spots left</span>
             </div>
           {% endif %}
-          <p class="tuition-card-note">In-person classroom sessions will be held on Mar 2&ndash;4, May 11&ndash;13, Jun 29 &ndash; Jul 1, and Aug 17&ndash;19. If COVID-19 continues to present public-health risks, however, these sessions will be conducted virtually.</p>
+          <p class="tuition-card-note">In-person classroom sessions will be held on Mar 29&ndash;31, Jun 7&ndash;9, Jul 26&ndash;28, and Sep 13&ndash;15. If COVID-19 continues to present public-health risks, however, these sessions will be conducted virtually.</p>
           <div class="tuition-card-meta mt-3">
             <p><strong>Location:</strong> Online + Washington DC</p>
             <p><strong>Instructors:</strong> Chris Cairns, Dan Levenson, Robert Read, and Lara Kohl</p>
