Add page block to meet the team section

--- a/pages/about.html
+++ b/pages/about.html
@@ -53,7 +53,7 @@ preload: hero-about-us.svg
   </section>
 
   {% if site.data.team[0] %}
-    <section id="meet-the-team" class="mx-auto container-xxl">
+    <section id="meet-the-team" class="mx-auto container-xxl page-block">
       <div class="page-block-header-2">
         <h2>Meet the team</h2>
       </div>
