--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -29,7 +29,7 @@ class_2_spots:
           <p class="hero-content text-shadow">Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course. Upon completion, you'll earn the Federal Acquisition Certification in Contracting Core-Plus Specialization in Digital Services (FAC-C-DS) and up to 80 Continuous Learning Points.</p>
           <div class="hero-btn-group mt-2">
             <div class="hero-btn-wrapper pr-1">
-              <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-123043007949">Register now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
+              <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-148264871221">Register now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
             </div>
             <div class="hero-btn-wrapper pl-1">
               <a class="btn btn-outline-light mt-sm-3" href="/assets/Skylight-DITAP-Syllabus.pdf">Read syllabus</a>
@@ -55,7 +55,7 @@ class_2_spots:
             <li><a class="nav-link" href="#faqs">FAQs</a></li>
           </ul>
         </nav>
-        <a class="btn btn-primary-dark font-weight-bold mt-2" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-123043007949">Register now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
+        <a class="btn btn-primary-dark font-weight-bold mt-2" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-148264871221">Register now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
       </div>
     </div>
 
@@ -190,15 +190,16 @@ class_2_spots:
       </div>
 
       <h2 id="tuition-and-dates">Dates and tuition</h2>
-      <a href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-123043007949" class="row tuition-card no-gutters mt-4">
+      <a href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-148264871221" class="row tuition-card no-gutters mt-4">
         <div class="col-12">
-          <h3 class="class-heading">March 29, 2021 to September 15, 2021</h3>
+          <h3 class="class-heading">November 8, 2021 to April 25, 2022</h3>
           {% if page.class_1_spots %}
             <div class="class-spots">
               <span>{{ page.class_1_spots }} spots left</span>
             </div>
           {% endif %}
-          <p class="tuition-card-note">In-person classroom sessions will be held on Mar 29&ndash;31, Jun 7&ndash;9, Jul 26&ndash;28, and Sep 13&ndash;15. If COVID-19 continues to present public-health risks, however, these sessions will be conducted virtually.</p>
+          <p class="tuition-card-note">In-person classroom sessions will be held on Nov 8&ndash;10, Jan 18&ndash;20, Mar 7&ndash;9, and Apr 25&ndash;27.
+            If COVID-19 continues to present public-health risks, however, these sessions will be conducted virtually.</p>
           <div class="tuition-card-meta mt-3">
             <p><strong>Location:</strong> Online + Washington DC</p>
             <p><strong>Instructors:</strong> Chris Cairns, Dan Levenson, Robert Read, and Lara Kohl</p>
