ditap training content edits

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -116,15 +116,15 @@ class_2_spots:
           </div>
           <div class="col-12 col-lg-4">
             <h3>Understanding What You're Buying</h3>
-            <p>Learn how to determine what your customer's needs are, how to assess which digital service solutions are most likely to succeed given your agency's current level of maturity, and how to conduct market research.</p>
+            <p>Learn how to determine what your customer's needs are, how to assess which digital services solutions are most likely to succeed given your agency's current level of maturity, and how to conduct market research.</p>
           </div>
           <div class="col-12 col-lg-4">
             <h3>How to buy</h3>
             <p>Understand how to develop an acquisition strategy that effectively factors in the needs of your customer, your agency's digital service maturity, your market research findings, and digital acquisition best practices.</p>
           </div>
           <div class="col-12 col-lg-4">
-            <h3>Awarding and Administering Digital Service Contracts</h3>
-            <p>Learn proven tools and techniques for awarding and administering digital service contracts that actually deliver results.</p>
+            <h3>Awarding and Administering Digital Services Contracts</h3>
+            <p>Learn proven tools and techniques for awarding and administering digital services contracts that actually deliver results.</p>
           </div>
           <div class="col-12 col-lg-4">
             <h3>Leading change as a digital acquisition professional</h3>
