--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -112,7 +112,7 @@ class_2_spots:
         <div class="text-grid row">
           <div class="col-12 col-lg-4">
             <h3>Digital Services in the 21st Century Government</h3>
-            <p>Learn the fundamentals of digital services, including agile software delivery, human-centered design, cloud computing, and X-as-a-service.</p>
+            <p>Learn the fundamentals of digital services, including agile software delivery, human-centered design, cloud computing, and X as a Service.</p>
           </div>
           <div class="col-12 col-lg-4">
             <h3>Understanding What You're Buying</h3>
