--- a/pages/training.html
+++ b/pages/training.html
@@ -10,8 +10,8 @@ preload: hero-training.svg
   color = 'blue'
   image = 'hero-training.svg'
 %}
-
-<div class="container container-lg prose">
+<section class="container-lg mx-auto">
+<div class="container prose">
   <div class="row">
     <div class="col-md-6 d-flex align-items-stretch">
       <div class="training-item toolkit-item p-5">
@@ -44,5 +44,6 @@ preload: hero-training.svg
     </div>
   </div>
 </div>
+</section>
 
 {% include get_expert_answers_cta.html %}
