--- a/pages/press.html
+++ b/pages/press.html
@@ -16,21 +16,22 @@ preload: hero-press.svg
   color = 'primary'
   image = 'hero-press.svg'
 %}
-
-<div class="container container-md text">
-  {% for item in paginator.posts %}
-    <p class="font-weight-bold mb-2 small mt-5 project-title-tag">{{ item.source }}: {{ item.date | date: "%B %-d, %Y" }}</p>
-    <h2 class="h3">
-      {% if item.heading %}
-        {{ item.heading }}
-      {% else %}
-        {{ item.title }}
-      {% endif %}
-    </h2>
-    <p class="mt-3">{{ item.summary }}</p>
-    <p class="font-weight-bold">Full story: <a href="{{ item.href }}">{{ item.title }}</a></p>
-  {% endfor %}
-</div>
+<section class="container-md mx-auto">
+  <div class="container text">
+    {% for item in paginator.posts %}
+      <p class="font-weight-bold mb-2 small mt-5 project-title-tag">{{ item.source }}: {{ item.date | date: "%B %-d, %Y" }}</p>
+      <h2 class="h3">
+        {% if item.heading %}
+          {{ item.heading }}
+        {% else %}
+          {{ item.title }}
+        {% endif %}
+      </h2>
+      <p class="mt-3">{{ item.summary }}</p>
+      <p class="font-weight-bold">Full story: <a href="{{ item.href }}">{{ item.title }}</a></p>
+    {% endfor %}
+  </div>
+</section>
 
 {% include pagination.html %}
 
