--- a/pages/join.html
+++ b/pages/join.html
@@ -92,7 +92,7 @@ preload: hero-join-us.svg
               which is what the government needs more of from industry."
             </p>
 
-            <p><i><b>Shashank Khandelwal,</b> Digital Transformer</i></p>
+            <p><i><b>Shashank Khandelwal,</b> VP of Human Services</i></p>
           </div>
         </div>
 
